Completa subcategorias nav

--- a/styles/style.css
+++ b/styles/style.css
@@ -130,10 +130,15 @@ nav.menu  div.container-grid div.grid > div {
     background: #fff;
     box-shadow: 0px 3px 6px rgba(0, 0, 0, .10);
 }
-
+nav.menu div.container-grid div.grid  .subtitulo{
+    font-size: 18px;
+    font-weight: normal;
+    color: #e47911;
+    padding: 10px 20px;
+}
         /*<<<<<<<<<<<<<<<<<'CATEGORIAS'>>>>>>>>>>>>>>>>>*/
 
-nav.menu  div.grid button {
+nav.menu  div.grid button.btn-back{
     background: #232f3e;
     color: #fff;
     border: none;
@@ -153,6 +158,10 @@ nav.menu  div.grid div.container-categorias {
     grid-area: categorias;
     padding-top: 10px;
     min-height: 300px;
+    height: 100%;
+    max-height: 300px;
+    overflow: auto;
+
 }
 
 nav.menu  div.grid div.container-categorias h3.subtitulo{
@@ -180,7 +189,62 @@ nav.menu  div.grid div.container-categorias a:hover .btn-arrow-left{
     display: inline-block;
 }
 
-/*<<<<<<<<<<<<<<<<<' MAIN '>>>>>>>>>>>>>>>>>*/
+/*<<<<<<<<<<<<<<<<<'SUBCATEGORIAS'>>>>>>>>>>>>>>>>>*/
+nav.menu  div.grid div.container-subcategorias{
+    grid-area: subcategorias;
+
+}
+nav.menu  div.grid div.container-subcategorias div.subcategorias{
+    display: none;
+    
+    grid-template-columns: repeat(3,1fr);
+    grid-template-rows: 1fr;
+    height: 100%;
+    
+}
+
+nav.menu  div.grid div.container-subcategorias div.subcategorias.active{
+    display: grid;
+}
+nav.menu  div.grid div.container-subcategorias div.subcategorias img{
+    width: 100%;
+    vertical-align: top;
+    height: 100%;
+    object-fit: cover; 
+}
+nav.menu  div.grid  div.subcategorias div.link-subcategoria{
+    padding-top: 10px;
+    height: 100%;
+    max-height: 300px;
+    overflow: auto;
+    
+}
+nav.menu  div.grid  div.subcategorias div.link-subcategoria a{
+    color: #000;
+    display: block;
+    font-size: 14px;
+    padding: 10px 20px;
+}
+nav.menu  div.grid  div.subcategorias div.link-subcategoria a:hover{
+    color: #e47b11;
+    font-weight: 500;
+    
+}
+nav.menu  div.grid  div.subcategorias div.banner-subcategoria a{
+    display: block;
+    height: 100%;
+}
+nav.menu  div.grid  div.subcategorias div.galeria-subcategoria{
+    display: flex;
+    flex-wrap: wrap;
+    align-content: start;
+}
+nav.menu  div.grid  div.subcategorias div.galeria-subcategoria a{
+    width: 50%;
+    height: 50%;
+}
+
+    /*<<<<<<<<<<<<<<<<<' MAIN '>>>>>>>>>>>>>>>>>*/
 
 .container{
     margin: 0 auto;
