--- a/styles/style.css
+++ b/styles/style.css
@@ -18,6 +18,7 @@ a{
 /*<<<<<<<<<<<<<<<<<'NAV'>>>>>>>>>>>>>>>>>*/
 
         /*<<<<<<<<<<<<<<<<<'MENU DESPLEGABLE'>>>>>>>>>>>>>>>>>*/
+
 nav div.container-button-menu{
     display: none;
     justify-content: space-between;
@@ -106,13 +107,12 @@ nav.menu  div.container-grid div.grid{
     position: absolute;
     top: 5px;
     z-index: 1000;
-    display: grid;
     grid-template-columns: repeat(4,1fr);
     grid-template-rows: 1fr;
     grid-template-areas: "categorias subcategorias subcategorias subcategorias"
 
 }
-nav.menu  div.container-grid div.grid.activ {
+nav.menu  div.container-grid div.grid.active {
     display: grid;
 }
 nav.menu  div.container-grid div.grid::before {
