--- a/styles/style.css
+++ b/styles/style.css
@@ -373,19 +373,325 @@ nav.menu  div.grid  div.subcategorias div.galeria-subcategoria a{
     height: 100vh;
 
 } */
-section#slider{
+
+section.slider{
     height: 300px;
     max-height: 300px;
 }
-section#slider img{
+section.slider img{
     width: 100%;
     height: 100%;
     object-fit: cover;
     object-position: top;
 }
 
+/*<<<<<<<<<<<<<<<<<' GRID SECTIONS'>>>>>>>>>>>>>>>>>*/
+.container-sections{
+    margin-top: 30px;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(6, auto);
+    grid-gap: 20px;
+    grid-template-areas: "oferta-title oferta-title masvendido-title masvendido-title"
+                          "oferta        oferta       masvendido         masvendido"
+                          "smartphone-title   smartphone-title  smartphone-title     smartphone-title"
+                          "smartphone   smartphone   smartphone        smartphone"
+                          "reloj-title   reloj-title  reloj-title     reloj-title"
+                          "reloj        reloj           reloj           reloj"
+                          "box-1          box-1          box-2             box-2 ";
+}
+div.oferta-title{
+    grid-area: oferta-title;
+    height: 40px;
+    background: transparent;
+    color: #666;
+    font-weight: 500;
+}
+section.oferta{
+    grid-area: oferta;
+    height: 310px;
+    background: transparent;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-bottom: 40px;
+}
+div.masvendido-title{
+    grid-area: masvendido-title;
+    height: 40px;
+    background: transparent;
+    color: #666;
+    font-weight: 500;
+}
+section.masvendido{
+    grid-area: masvendido;
+    height: 310px;
+    background: transparent;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-bottom: 40px;
+    
+}
+div.smartphone-title{
+    grid-area: smartphone-title;
+    height: 40px;
+    background: transparent;
+    color: #666;
+    font-weight: 500;
+}
+section.smartphone{
+    grid-area: smartphone;
+    height: 310px;
+    background: transparent;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-bottom: 40px;
+
+}
+div.reloj-title{
+    grid-area: reloj-title;
+    height: 40px;
+    background: transparent;
+    color: #666;
+    font-weight: 500;
+}
+section.reloj{
+    grid-area: reloj;
+    height: 310px;
+    background: transparent;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-bottom: 40px;
+
+}
+section.box-1{
+    grid-area: box-1;
+    display: flex;
+    height: 250px;
+    background-color: #fff;
+    margin-bottom: 40px;
+    
+}
+section.box-1:hover{
+    box-shadow: 0px 0px 20px 0px rgba(0,0,0,.4);     
+}
+
+section.box-2{
+    grid-area: box-2;
+    display: flex;
+    height: 250px;
+    background-color: #fff;
+    margin-bottom: 40px;
+    
+}
+section.box-2:hover{
+    box-shadow: 0px 0px 20px 0px rgba(0,0,0,.4);     
+}
+div.box-desc{
+    width: 50%;
+    text-align: center;
+    margin: auto 0px;
+    
+}
+span.box-text{
+    display: block;
+    width: 100%;
+    padding: 20px 10px;
+    color: #e47b1185;
+}
+span.box-title{
+    display: block;
+    width: 100%;
+    padding: 20px 10px;
+    text-anchor: middle;
+}
+div.box-btn{
+    width: 100px;
+    display: block;
+    padding: 10px ;
+    border-radius: 4px;
+    margin: 20px auto;
+    font-size: 16px;
+    cursor: pointer;
+    border: 1px solid rgba(0,0,0,.4);
+}
+div.box-btn:hover{
+    background: #232f3e;
+    color: #fff;
+    transition: 1s ease all;
+    
+}
+
+figure.box-img{
+    width: 50%;
+}
+figure.box-img img{
+    width: 100%;
+}
+/*<<<<<<<<<<<<<<<<  IMG FIX >>>>>>>>>>>>>>>>>*/
+section.img-fix{
+    width: 100%;
+    height: 250px;
+    max-height: 300px;
+    background-image: url('../recursos/img-fixed.jpeg');
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: 50%;
+    position: relative;
+}
+
+div.fix-text{
+    display: flex;
+   justify-content: center;
+   align-items: center;
+    height: 90px;
+    width: 100%;
+    position: absolute;
+    top: 35%;
+    font-weight: bold;
+    font-size: 38px;
+    background-color: rgba(32, 12, 12, 0.5);
+    color: rgba(255, 255, 255, 0.8);
+    
+}
+div.fix-text h3{ 
+    height: 100%;
+    display: inline-block;
+    padding-top: 15px;
+    padding-left: 30px;
+    text-align: center;
+}
+
+/*<<<<<<<<<<<<<<<<<' FOOTER'>>>>>>>>>>>>>>>>>*/
+
+footer.footer-container{
+    
+    background-color: #232f3e;
+}
 
 
+
+/*<<<<<<<<<<<<<<<<<' iTEMS'>>>>>>>>>>>>>>>>>*/
+
+.item{
+    background: #fff;
+    position: relative;
+    width: 200px;
+    height: 300px;
+    border-radius: 4px;
+    /* margin: 0 8px 16px; */
+    box-shadow: 0px 0px 20px 0px transparent;  
+}
+.item:hover{
+    box-shadow: 0px 0px 20px 0px rgba(0,0,0,.4);  
+    transition: 1s ease all; 
+}
+.item a{
+    width: 100%;
+    height: 100%;
+}
+/* ------------ITEM-IMAGEN------------- */
+.item .item-img{
+    width: 100%;
+    /* object-fit: cover; */
+}
+.item .item-img img{
+    width: 100%;
+}
+/* ---------------ITEM-DESCRIPCION---------------- */
+.item-desc{
+    border-top:1px solid #eaeded;
+    padding: 10px;
+    height: 100%;
+    max-height: 95px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    color: #000;
+}
+.price{
+    width: 100%;
+    display: block;
+    font-size: 18px;
+    padding: 3px 0;
+    
+}
+.price-after{
+    width: 100%;
+    display: block;
+    color: #ccc;
+    text-decoration-line: line-through;
+    
+}
+.item-title{
+    width: 100%;
+    display: block;
+    padding: 3px 0;
+    
+}
+/* ---------------ITEM-ICONS---------------- */
+.item-fav{
+    position: absolute;
+    top: 15PX;
+    left: 15px;
+    z-index: 5000;
+    color: #000;
+    font-size: 28px;
+    cursor: pointer;
+}
+.item-fav:hover{
+    font-size: 34px;
+    /* transition: 1s ease all;  */
+    
+}
+
+.item-cart{
+    cursor: pointer;
+    position: absolute;
+    top: 15px;
+    left: 156px;
+    font-size: 26px;
+    z-index: 5000;
+}
+.item-cart:hover{
+    font-size: 34px;
+    /* transition: 1s ease all;  */    
+}
+.item-button{
+    padding: 7px 10px;
+    border: 1px solid rgba(0,0,0,.4);
+    border-radius: 4px;
+    width: 100px;
+    font-size: 14px;
+    text-align: center;
+    position: absolute;
+    left: 80px;
+    bottom: 52px;
+    cursor: pointer;
+}
+.item-button:hover{
+    transition: 1s ease all;    
+    background: #000000;
+    color: #fff;
+}
+
+
+/*<<<<<<<<<<<<<<<<<' API WHATSAPP'>>>>>>>>>>>>>>>>>*/
+.whatsapp{
+    position: fixed;
+    bottom: 5%;
+    left: 96%;
+}
+.whatsapp a:hover{
+    font-size: 46px;
+}
+.whatsapp a{
+    color: #075e54;
+    font-size: 40px;
+}
 
 /*<<<<<<<<<<<<<<<<<'MEDIAQUERYS'>>>>>>>>>>>>>>>>>*/
 @media screen and (max-width: 1150px){
