--- a/styles/sign-up.css
+++ b/styles/sign-up.css
@@ -1,18 +1,16 @@
-body {
-    background-image: url("../recursos/patron1.jpg");
+body{
     background-color: #232f3e;
+    background-image: url("../recursos/patron1.jpg");
     background-blend-mode: multiply;
     background-size: 350px;
 }
-
 main {
-    height: 100vh;
+    height: auto;
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
 }
-
 a {
     color: #e47911;
 }
@@ -21,37 +19,32 @@ div.logo {
     width: 120px;
     margin: 0 auto;
 }
-
 div.logo img {
     border-radius: 8px;
     box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, .8);
     width: 100%;
 }
-
 .titulo {
     color: #eee;
     margin: 20px 0;
     text-shadow: 0px 0px 14px rgba(0, 0, 0, .8);
     text-align: center;
 }
-
 section.container-form {
     width: 350px;
     height: auto;
-    max-height: 99%;
+    /* max-height: 99%; */
     font-size: 14px;
     color: #232f3e;
     /* border: .5px solid rgba(255, 255, 255, 0.4); */
 }
-
-section #form-sign-in {
+section #form-sign-up {
     padding: 25px 20px;
     border-radius: 15px;
     background: #eaeded;
     box-shadow: 0px -2px 30px 0px rgba(0, 0, 0, .8);
 }
-
-#form-sign-in .input-sign {
+#form-sign-up .input-sign {
     width: 100%;
     padding: 10px 10px 10px 40px;
     margin: 10px 0;
@@ -62,43 +55,43 @@ section #form-sign-in {
     border: 1px solid rgba(255, 255, 255, 0.4);
     font-size: 16px;
 }
-
-#form-sign-in .input-sign:hover {
+#form-sign-up .input-sign:hover {
     border: 1px solid #e47911;
 }
-
-#form-sign-in .input-sign:focus {
+#form-sign-up .input-sign:focus {
     border: 1px solid rgba(255, 255, 255, 0.4);
 }
-
-#form-sign-in .input-sign::placeholder {
+#form-sign-up .input-sign::placeholder {
     transition: .5s ease all;
     font-size: 16px;
     color: rgba(255, 255, 255, 0.4);
 }
-
-#form-sign-in .container-label {
-    display: flex;
-    justify-content: space-between;
-}
-
-#form-sign-in .label-email {
+#form-sign-up .label-sign-up {
     font-weight: bold;
     font-size: 14px;
 }
-
-#form-sign-in .label-password {
-    font-weight: bold;
-    font-size: 14px;
-    display: block;
+div.name {
+    padding: 5px 0;
+    position: relative;
 }
-
-#form-sign-in .olvidado {
-    text-align: right;
-    font-size: 13px;
-    display: block;
+#icon-name{
+    position: absolute;
+    left: 10px;
+    bottom: 23px;
+    font-size: 20px;
+    color: rgba(255, 255, 255, 0.8);
 }
-
+div.surname {
+    padding: 5px 0;
+    position: relative;
+}
+#icon-surname{
+    position: absolute;
+    left: 10px;
+    bottom: 23px;
+    font-size: 20px;
+    color: rgba(255, 255, 255, 0.8);
+}
 div.email {
     padding: 5px 0;
     position: relative;
@@ -110,7 +103,6 @@ div.email {
     font-size: 20px;
     color: rgba(255, 255, 255, 0.8);
 }
-
 div.password {
     padding: 5px 0;
     position: relative;
@@ -122,17 +114,10 @@ div.password {
     font-size: 20px;
     color: rgba(255, 255, 255, 0.8);
 }
-div.recuerdame {
-    display: flex;
-    justify-content: flex-end;
-    font-size: 13px;
-}
-
-div.container-btn-sign-in {
+div.container-btn-sign-up {
     text-align: center;
 }
-
-#btn-sign-in {
+#btn-sign-up {
     width: 50%;
     padding: 10px 20px;
     margin-top: 20px;
@@ -145,18 +130,16 @@ div.container-btn-sign-in {
     font-size: 16px;
 }
 
-#btn-sign-in:hover {
+#btn-sign-up:hover {
     border: 1px solid rgba(0, 0, 0, .4);
     background: #232f3e;
     transition: .5s ease all;
 }
-
 .advertencia {
     font-size: 12px;
     margin-top: 15px;
 }
-
-div.sign-up {
+div.sign-in {
     background: #eaeded;
     color: #232f3e;
     padding: 20px 20px;
@@ -167,7 +150,7 @@ div.sign-up {
     text-align: center;
 }
 
-#btn-sign-up {
+#btn-sign-in {
     width: 50%;
     padding: 10px 20px;
     margin-top: 8px;
@@ -180,14 +163,19 @@ div.sign-up {
     font-size: 16px;
 }
 
-#btn-sign-up:hover {
+#btn-sign-in:hover {
     border: 1px solid transparent;
     background: #e47911;
     transition: .5s ease all;
 }
-
-
-.copy{
-    position: fixed;
-    bottom: 0px;
+div.footer-sign-up ul{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    display: none;
+}
+div.footer-sign-up ul li a{
+    font-size: 13px;
+    display: inline-block;
+    padding: 0 10px
 }
