--- a/styles/header-footer.css
+++ b/styles/header-footer.css
@@ -425,7 +425,10 @@ div.footer-container {
     font-size: 16px;
     color: rgba(255, 255, 255, 0.4);
 }
-
+footer a:hover, footer li a {
+    color: #eaeded;
+    transition: .4s ease all;
+}
 .footer-menu {
     width: 100%;
     grid-area: footer-menu;
