--- a/styles/sign-up.css
+++ b/styles/sign-up.css
@@ -5,7 +5,7 @@ body{
     background-size: 350px;
 }
 main {
-    height: auto;
+    height: 100%;
     width: 100%;
     display: flex;
     justify-content: center;
@@ -31,6 +31,7 @@ div.logo img {
     text-align: center;
 }
 section.container-form {
+    margin-top: 30px;
     width: 350px;
     height: auto;
     /* max-height: 99%; */
@@ -168,14 +169,28 @@ div.sign-in {
     background: #e47911;
     transition: .5s ease all;
 }
+
+footer{
+    margin-top: 30px;
+}
 div.footer-sign-up ul{
+    
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
     align-items: center;
-    display: none;
+    margin-right: 20px;
+
 }
 div.footer-sign-up ul li a{
     font-size: 13px;
-    display: inline-block;
-    padding: 0 10px
+    display: block;
+    padding: 0 10px;
+    color: rgba(255, 255, 255, 0.6);
+}
+
+@media (max-width: 600px){
+    div.footer-sign-up ul{
+        display: none;
+    
+    }  
 }
