--- a/styles/contact.css
+++ b/styles/contact.css
@@ -4,18 +4,26 @@
     max-width: 1150px;
 }
 
+
 body {
     background-image: url("../recursos/patron1.jpg");
     background-color: #232f3e;
     background-blend-mode: multiply;
     background-size: 350px;
 }
+main {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
 section.contain-coment{
     background: #eaeded;
     box-shadow: 0px 10px 30px 0px rgba(0, 0, 0, .8);
     text-align: center;
-    width: 60%;
+    width: 500px;
     margin: 30px auto;
     border-radius: 10px;
     color: #232f3e;
@@ -57,7 +65,7 @@ div.name {
 }
 #icon-name{
     position: absolute;
-    left: 42px;
+    left: 32px;
     bottom: 23px;
     font-size: 20px;
     color: rgba(255, 255, 255, 0.8);
@@ -68,7 +76,7 @@ div.email {
 }
 #icon-email{
     position: absolute;
-    left: 42px;
+    left: 32px;
     bottom: 23px;
     font-size: 20px;
     color: rgba(255, 255, 255, 0.8);
@@ -80,7 +88,7 @@ div.coment {
 }
 #icon-coment{
     position: absolute;
-    left: 42px;
+    left: 32px;
     bottom: 200px;
     font-size: 20px;
     color: rgba(255, 255, 255, 0.8);
