--- a/styles/cart.css
+++ b/styles/cart.css
@@ -1,28 +1,32 @@
+*{
+    box-sizing: border-box;
+}
 .container {
     margin: 0 auto;
-    width: 90%;
+    width: 100%;
     max-width: 1150px;
 }
-section.contain-cart{
+
+section.contain-cart {
     display: flex;
-    margin: 30px 0;
-    
+    margin: 20px 0;
 }
-div.cart-product{
-    
+
+div.cart-product {
     width: 80%;
     height: 400px;
     overflow: auto;
-    
 }
-div.pago{
+
+div.pago {
     width: 20%;
-    padding: 20px;
+    margin: 10px;
+    padding: 10px;
     background: #fff;
     border-radius: 10px;
-
 }
-article.cart-article{
+
+article.cart-article {
     height: 180px;
     display: flex;
     align-items: center;
@@ -32,30 +36,35 @@ article.cart-article{
     border-radius: 10px;
     /* box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, .4); */
 }
-div.cart-product-img{
+
+div.cart-product-img {
     width: 30%;
 }
-div.cart-product-img img{
+
+div.cart-product-img img {
     object-fit: contain;
     height: 150px;
     width: 100%;
 }
-div.cart-product-desc{
+
+div.cart-product-desc {
     width: 70%;
     position: relative;
 }
-div.icon-borrar{
+
+div.icon-borrar {
     position: absolute;
     top: -54px;
     right: 6px;
     font-size: 24px;
 }
-div.icon-borrar:hover{
+
+div.icon-borrar:hover {
     font-size: 30px;
     transition: .5s ease all;
 }
 
-#btn-comprar{
+#btn-comprar {
     width: 100%;
     padding: 10px 20px;
     margin-top: 20px;
@@ -66,10 +75,62 @@ div.icon-borrar:hover{
     color: #eaeded;
     cursor: pointer;
     font-size: 16px;
+    max-width: 190px;
 }
 
 #btn-comprar:hover {
     border: 1px solid transparent;
     background: #232f3e;
     transition: .5s ease all;
+}
+
+@media screen and (max-width: 800px) {
+    
+    section.contain-cart {
+        flex-flow: column-reverse;
+        margin: 10px 0;
+    }
+    div.cart-product {
+        width: 100%;
+    }
+    h2.title-product{
+        font-size: 20px;
+    }
+    div.pago {
+        width: auto;
+        margin: 10px;
+        display: flex;
+        height: 140px;
+        align-items: center;
+
+    }
+    div.pago-description{
+        width: 70%;
+    }
+    div.pago-btn{
+        width: 30%;
+    }
+    #btn-comprar{
+        margin-top: 0px;
+    }
+}
+@media screen and (max-width: 560px) {
+    div.pago {
+        display: block;
+    }
+    div.pago-description{
+        width: initial;
+    }
+    h2.title-product{
+        font-size: 18px;
+    }
+    div.pago-btn{
+        width: initial;
+        display: flex;
+        justify-content: center;
+    }
+    #btn-comprar{
+        margin-top: 20px;
+    }
+   
 }
