--- a/styles/home.css
+++ b/styles/home.css
@@ -214,9 +214,9 @@
         height: 90px;
         width: 100%;
         position: absolute;
-        top: 35%;
+        top: 30%;
         font-weight: bold;
-        font-size: 38px;
+        font-size: 28px;
         background-color: rgba(32, 12, 12, 0.5);
         color: rgba(255, 255, 255, 0.8);
     }
@@ -224,7 +224,7 @@
     div.fix-text h3 {
         height: 100%;
         display: inline-block;
-        padding-top: 15px;
+        padding-top: 25px;
         padding-left: 30px;
         text-align: center;
     }
@@ -263,3 +263,78 @@
         color: #0084ff;
         font-size: 40px;
     }
+
+    /*<<<<<<<<<<<<<<<<<'MEDIAQUERYS'>>>>>>>>>>>>>>>>>*/
+
+@media screen and (max-width: 1150px) {
+    div.container {
+        width: 100%;
+    }
+   
+    .fix-text h3{
+        font-size: 30px;
+    }
+}
+
+@media screen and (max-width: 800px) {
+    div.container {
+        width: 90%;
+    }
+    .oculta {
+        display: none;
+    }
+    
+    .container-sections {
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(8, auto);
+        grid-template-areas: "oferta-title  masvendido-title" "oferta          masvendido" "smartphone-title       smartphone-title" "smartphone        smartphone" "reloj-title       reloj-title" "reloj                 reloj" "box-1          box-1      " " box-2          box-2 ";
+    }
+    
+    
+
+
+     /*<<<<<<<<<<<<<<<<<'SLIDER>>>>>>>>>>>>>>>>>*/
+     section.slider img {
+        
+        object-fit: cover;
+        
+    }
+    section.slider {
+        height: auto;
+        max-height: 300px;
+    }
+    .container-apis{
+        
+        right: 20px;
+    }
+     
+    .fix-text h3{
+        font-size: 20px;
+    }
+}
+@media screen and (max-width: 560px) {
+    div.container {
+        width: 98%;
+    }
+    .container-sections {
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(10, auto);
+        grid-template-areas: "oferta-title"  
+                            "oferta"   
+                            "masvendido-title"
+                            "masvendido" 
+                            "smartphone-title"   
+                            "smartphone"    
+                            "reloj-title" 
+                            "reloj"               
+                            "box-1"          
+                            "box-2"
+    }
+    .oculta2{
+        display: none;
+    }
+    section.box-1, section.box-2  {
+        flex-direction: column-reverse;
+        align-items: center;
+    }
+}
