--- a/styles/footer.css
+++ b/styles/footer.css
@@ -2,7 +2,6 @@
 
 footer {
     background-color: #232f3e;
-    
 }
 
 div.footer-container {
@@ -16,18 +15,19 @@ div.footer-container {
     font-size: 16px;
     color: rgba(255, 255, 255, 0.4);
 }
- footer a {
+
+footer a {
     display: inline-block;
-    
 }
-footer a:hover{
+
+footer a:hover {
     color: #eaeded;
     transition: .4s ease all;
 }
+
 .footer-menu {
     width: 100%;
     grid-area: footer-menu;
-    
 }
 
 .footer-menu h4, .footer-menu a {
@@ -87,10 +87,12 @@ footer a:hover{
     margin: 5px;
     color: rgba(255, 255, 255, 0.4);
 }
-.footer-social li a:hover{
+
+.footer-social li a:hover {
     color: #eaeded;
     transition: .4s ease all;
 }
+
 h4.footer-title {
     color: rgba(0, 0, 0, .4);
     padding-bottom: 10px;
@@ -115,43 +117,35 @@ div.copy a {
     div.container {
         width: 100%;
     }
-    
 }
 
 @media screen and (max-width: 800px) {
     div.container {
         width: 90%;
     }
-   
-    
-     /*<<<<<<<<<<<<<<<<<'FOOTER>>>>>>>>>>>>>>>>>*/
-     div.footer-container {
-       
+    /*<<<<<<<<<<<<<<<<<'FOOTER>>>>>>>>>>>>>>>>>*/
+    div.footer-container {
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: repeat(2, auto);
-       
-        grid-template-areas: "footer-newleter footer-newleter"
-                                "footer-menu footer-social";
-       
+        grid-template-areas: "footer-newleter footer-newleter" "footer-menu footer-social";
+        padding: 20px 0;
     }
     .footer-menu {
         padding-right: 40%;
-        
     }
     .footer-social {
         padding-left: 40%;
     }
-    
 }
+
 @media screen and (max-width: 560px) {
     div.container {
         width: 98%;
     }
     .footer-menu {
-        padding-right: 20%;
-        
+        padding-right: 0;
     }
     .footer-social {
-        padding-left: 20%;
+        padding-left: 0;
     }
 }
