--- a/styles/sign-up.css
+++ b/styles/sign-up.css
@@ -1,3 +1,12 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    list-style: none;
+}
+a{
+    text-decoration: none;
+}
 body{
     background-color: #232f3e;
     background-image: url("../recursos/patron1.jpg");
